# shyft-rs-sdk

./: Cargo.toml  README.md  cargo.toml
.github/workflows/: ci.yml  rust.yml
examples/: get_parsed_transaction_details.rs  get_transaction_history.rs  get_transaction_parse_selected.rs
src/: api.rs  constants.rs  error.rs  lib.rs
src/api/: mod.rs
src/api/transactions/: mod.rs  parse_signature.rs  transaction_history.rs
src/models/: mod.rs  parsed_transaction_details.rs
tests/: get_parsed_transaction_details.rs  get_transaction_history.rs  get_transaction_parse_selected.rs
