[package]
name = "shyft-rs-sdk"
version = "0.1.1"
authors = ["thelezend"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
description = "Rust library for interacting with the Shyft API."
repository = "https://github.com/thelezend/shyft-rs-sdk"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
reqwest-middleware = { version = "0.3.3" }
reqwest-retry = { version = "0.6.1" }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.39.3", features = ["full"] }
